public/components/layout/_layout.global.css
@import 'css/_globals.css';

.layout-wrap-width {
  @mixin layout;
  max-width: 38em;
  max-width: 38em;
  padding-bottom: var(--size-baseline-vertical);
  &.layout-wrap-width--wide {
    max-width: 52em;
  }
}

.layout-skip-link {
  @mixin font-body-copy;
  text-align: center;
  color: var(--color-text);
  background: var(--color-cta);
  text-decoration: underline;
  position: absolute;
  height: var(--size-header-height);
  line-height: var(--size-header-height);
  top: calc(var(--size-header-height) * -1);
  display: block;
  &:focus {
    position: static;
  }
}

.layout-header {
  padding: var(--size-baseline) 0 var(--size-baseline-vertical);
  display: block;
  color: inherit;
  text-decoration: none;
  & + .layout-header {
    margin-top: calc(var(--size-baseline-vertical) / -2);
  }
}

.layout-header__title {
  @mixin font-header;
  font-weight: 500;
  margin: 0;
  color: currentColor;
  text-decoration: none;
  & a:not([class]) {
    @mixin link;
    color: currentColor;
  }
  & .form-button {
    @media (--viewport-min-tablet) {
      display: inline-flex;
      vertical-align: 10%;
      margin-left: calc(var(--size-baseline-gutter) / 2);
    }
  }
  &.layout-header__title--standfirst {
    @mixin font-header-standfirst;
    font-weight: 300;
    margin-top: calc(var(--size-baseline) / 2);
  }
  &.layout-header__title--has-proxy {
    display: flex;
    flex-direction: column;
    @media (--viewport-min-mobile-landscape) {
      align-items: baseline;
      justify-content: space-between;
      flex-direction: row;
    }
    & > div:nth-child(1) {
      overflow: hidden;
      word-wrap: break-word;
    }
    & > .layout-header__title__proxy {
      flex: 0 0 auto;
      margin-top: calc(var(--size-baseline) * 1.5);
      @media (--viewport-min-mobile-landscape) {
        align-self: flex-end;
        margin-top: 0;
        margin-left: var(--size-baseline);
      }
    }
  }
}

.layout-header__title__proxy {
  @mixin font-body-copy-small;
  @mixin link;
  color: currentColor;
}

.layout-section {
  margin-top: var(--size-baseline-vertical);
  border-top: 1px solid var(--color-border);
  padding-top: var(--size-baseline);
  &.layout-section--far {
    margin-top: calc(var(--size-baseline-vertical) * 3);
  }
  &.layout-section--no-border {
    padding-top: 0;
    border-top: 0;
  }
  & .layout-header + & {
    margin-top: 0;
  }
}

/*
texty text
*/
.layout-text {
  @mixin font-body-copy;
  & a {
    @mixin link;
  }
  &.layout-text--center {
    text-align: center;
  }
  &.layout-text--small {
    @mixin font-body-copy-small;
  }
  &.layout-text--bold {
    font-weight: 500;
  }
}

